--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,17 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
+/* Темная тема принудительно */
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --text-color: #f1b2ce;
+  --bg-color: #000028;
+  --title-color: #db00ff;
+  --button-hover: rgba(255, 0, 112, 0.4);
+  --text-accent-color: #000028;
+  --button-color: #ff0070;
+  --section-title-color: #ff0070;
+  --accent-color: #ff0070;
+  --bg-image: url("../images/cover-image-dark.png");
+  --decor-color: #ff0070;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-dark .header__rec {
+  display: block;
 }
