--- a/styles/light.css
+++ b/styles/light.css
@@ -1,16 +1,17 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
+/* Светлая тема принудительно */
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --text-color: #353430;
+  --bg-color: #fff1f7;
+  --title-color: #ffc2e6;
+  --button-hover: rgba(53, 52, 48, 0.4);
+  --text-accent-color: #353430;
+  --button-color: #353430;
+  --section-title-color: #353430;
+  --accent-color: #ff8dcb;
+  --bg-image: url("../images/cover-image-light.png");
+  --decor-color: #353430;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+.theme-light .header__rec {
+  display: none;
 }
