--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,325 @@
+/* Основные стили компонентов */
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
+/* Базовые сбросы */
+/* Основные стили проекта */
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-color: var(--bg-color);
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  font-family: var(--main-font);
+  font-size: 18px;
+  margin: 0 auto;
+  min-inline-size: 375px;
+  line-height: 1.3;
+  width: 100%;
 }
+
+html, body {
+  overflow-x: hidden;
+}
+
+/* Базовые сбросы */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Секции */
+.section {
+  padding: 15px 0px;
+}
+
+.section__title {
+  color: var(--section-title-color);
+  font-weight: 700;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr auto;
+  align-items: center;
+  min-height: 100vh;
+  padding: var(--main-padding);
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: start;
+  margin-top: 60px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
+}
+
+.header__theme-menu-button {
+  border: 1px solid transparent;
+  padding: 2px 12px;
+  color: var(--button-color);
+  background: transparent;
+  cursor: pointer;
+  font-family: 'IBM Plex mono';
+  font-size: inherit;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button_active {
+  border-color: var(--button-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  border-color: var(--button-hover);
+}
+
+.header__theme-menu-button_type_dark {
+  margin-top: -5px;
+}
+
+.header__title {
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  font-size: 116px;
+  line-height: 82.5%;
+}
+
+.header__content {
+  justify-self: end;
+  align-self: end;
+  max-width: 355px;
+  margin-bottom: 56px;
+}
+
+.header__text {
+  font-size: 18px;
+  color: var(--text-accent-color);
+  background-color: var(--accent-color);
+  font-weight: 700;
+}
+
+/* Уголки */
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before,
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+}
+
+.decorated-zone::before {
+  top: 10px;
+  right: 10px;
+  border-top: 1px solid var(--decor-color);
+  border-right: 1px solid var(--decor-color);
+}
+
+.decorated-zone::after {
+  bottom: 10px;
+  left: 10px;
+  border-bottom: 1px solid var(--decor-color);
+  border-left: 1px solid var(--decor-color);
+}
+
+/* REC иконка - скрыта по умолчанию */
+.header__rec {
+  position: absolute;
+  top: 10px;
+  right: 38px;
+  color: var(--accent-color);
+  text-transform: uppercase;
+  display: none; /* По умолчанию скрыт */
+}
+
+.header__rec::after {
+  content: "";
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--accent-color);
+  filter: drop-shadow(0 0 4px var(--accent-color));
+  top: 50%;
+  right: -18px;
+  transform: translateY(-50%);
+}
+
+/* Основной контент */
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  padding: 40px 10px;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: -15px;
+}
+
+.section__title {
+  color: var(--section-title-color);
+  font-weight: 700;
+  font-size: inherit;
+}
+
+.tip__title {
+  background-color: var(--accent-color);
+  color: var(--text-accent-color);
+  font-weight: 400;
+  margin: 20px 0px 10px;
+}
+
+.concentration {
+  margin-top: -35px;
+}
+
+.tips {
+  margin-top: -35px;
+}
+
+.concentration__title, .tips__title {
+  margin-top: -16px;
+}
+
+.reason__text, .concentration__article {
+  margin-bottom: 20px;
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  color: var(--text-accent-color);
+  font-weight: 700;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+/* Галерея */
+.gallery {
+  margin-top: -30px;
+}
+
+.gallery__title {
+  margin-bottom: -10px;
+}
+
+.gallery__content {
+  display: grid;
+  gap: 10px;
+}
+
+.gallery__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Подвал */
+.footer {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+  padding: var(--main-padding);
+}
+
+.footer__title {
+  color: var(--title-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+  font-size: 116px;
+  margin-top: -30px;
+}
+
+/* Адаптив для планшетов */
+@media (width >= 768px) {
+  .header__title {
+    margin-left: -10px;
+    font-size: 120px;
+  }
+
+  .header__theme-menu {
+    margin-right: 10px;
+    margin-top: 176px;
+  }
+
+  .header__content {
+    margin-right: 10px;
+    max-width: 364px;
+    margin-bottom: 171px;
+  }
+
+  .section {
+    margin:0px 10px;
+  }
+
+  .reasons {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-top: 5px;
+  }
+
+  .concentration__title {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    margin-top: -20px;
+  }
+
+  .tips {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-top: -20px;
+  }
+
+  .tips__title {
+    margin-top: 0px;
+  }
+
+  .gallery__content {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 15px;
+  }
+  
+  .gallery__image:nth-child(1) {
+    grid-column: span 2;
+  }
+  
+  .gallery__image:nth-child(2) {
+    grid-row: span 2;
+  }
+  
+  .gallery__image:nth-child(3) {
+    grid-row: span 2;
+  }
+  
+  .gallery__image:nth-child(5) {
+    grid-column: span 2;
+  }
+
+  .footer__title {
+    font-size: 120px;
+    margin-top: 30px;
+  }
+}
+
+/* Адаптив для десктопа */
+@media (width >= 1024px) {
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+}
+/*vbv/*
+
+
