--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,34 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --main-font: 'IBM Plex Mono', monospace;
+  --main-font-size: 18px;
+  --main-line-height: 130%;
+  --main-padding: 10px;
+  
+  /* Основные цвета для светлой темы */
+  --text-color: #353430;
+  --bg-color: #fff1f7;
+  --title-color: #ffc2e6;
+  --button-hover: rgba(53, 52, 48, 0.4);
+  --text-accent-color: #353430;
+  --button-color: #353430;
+  --section-title-color: #353430;
+  --accent-color: #ff8dcb;
+  --bg-image: url("../images/cover-image-light.png");
+  --decor-color: #353430;
+}
+
+/* Авто-режим: зависит от системных настроек */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-color: #f1b2ce;
+    --bg-color: #000028;
+    --title-color: #db00ff;
+    --button-hover: rgba(255, 0, 112, 0.4);
+    --text-accent-color: #000028;
+    --button-color: #ff0070;
+    --section-title-color: #ff0070;
+    --accent-color: #ff0070;
+    --bg-image: url("../images/cover-image-dark.png");
+    --decor-color: #ff0070;
+  }
+}
